# bostil-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.local.yml  docker-compose.yml
.github/workflows/: check-build.yml  check_build.yml  docker-build.yml
app/: Cargo.toml  diesel.toml
app/migrations/2024-01-09-225829_create_guilds/: down.sql  up.sql
app/migrations/2024-01-10-033946_create_users/: up.sql
app/migrations/2024-01-10-034005_create_polls/: down.sql  up.sql
app/public/locales/: en-US.yml  pt-BR.yml
app/public/static/: users.json
app/src/: lib.rs  main.rs  schema.rs
app/src/modules/: mod.rs
app/src/modules/app/: mod.rs
app/src/modules/app/commands/: jingle.rs  language.rs  mod.rs  ping.rs
app/src/modules/app/commands/poll/: mod.rs  progress_bar.rs  setup.rs
app/src/modules/app/commands/poll/embeds/: mod.rs  setup.rs  vote.rs
app/src/modules/app/commands/radio/: consumer.rs  equalizers.rs  mod.rs
app/src/modules/app/commands/voice/: join.rs  leave.rs  mute.rs
app/src/modules/app/listeners/: mod.rs
app/src/modules/app/listeners/chat/: love.rs  mod.rs
app/src/modules/app/listeners/modal/: poll_option.rs
app/src/modules/app/listeners/voice/: join_channel.rs  mod.rs
app/src/modules/app/services/: mod.rs
app/src/modules/app/services/integrations/: jukera.rs  mod.rs
app/src/modules/core/: mod.rs
app/src/modules/core/actions/: collectors.rs  mod.rs  voice.rs
app/src/modules/core/entities/: guild.rs  mod.rs  poll.rs  user.rs
app/src/modules/core/helpers/: database.rs  http_client.rs  mod.rs
core/: Cargo.toml
core/src/: arguments.rs  commands.rs  embeds.rs  integrations.rs  lib.rs  listeners.rs
core/src/collectors/: command.rs  listener.rs  mod.rs
core/src/runners/: command.rs  listener.rs  mod.rs
migrations/2024-01-09-225829_create_guilds/: down.sql  up.sql
migrations/2024-01-10-033946_create_users/: up.sql
migrations/2024-01-10-034005_create_polls/: down.sql  up.sql
public/locales/: en-US.yml  pt-BR.yml
public/static/: users.json
public/static/locales/: en.yml  pt-BR.yml  pt.yml
src/: lib.rs  main.rs  schema.rs
src/commands/: jingle.rs  language.rs  mod.rs  ping.rs
src/commands/poll/: database.rs  help.rs  mod.rs
src/commands/poll/setup/: create.rs  mod.rs  options.rs
src/commands/poll/setup/embeds/: mod.rs  setup.rs  vote.rs
src/commands/poll/utils/: mod.rs
src/commands/radio/: consumer.rs  mod.rs
src/commands/voice/: join.rs  leave.rs  mod.rs  mute.rs
src/components/: button.rs
src/database/: locale.rs  mod.rs
src/events/: mod.rs  voice.rs
src/integrations/: jukera.rs  mod.rs
src/interactions/: join_channel.rs  love.rs  mod.rs  voice_channel.rs
src/interactions/chat/: love.rs  mod.rs
src/interactions/modal/: mod.rs  poll_option.rs
src/interactions/voice_channel/: join_channel.rs  mod.rs
src/internal/: arguments.rs  constants.rs  debug.rs  mod.rs  users.rs
src/modules/: mod.rs
src/modules/app/commands/: jingle.rs  language.rs  mod.rs  ping.rs
src/modules/app/commands/poll/: database.rs  help.rs  mod.rs
src/modules/app/commands/poll/setup/: create.rs  options.rs
src/modules/app/commands/poll/setup/embeds/: mod.rs  setup.rs  vote.rs
src/modules/app/commands/poll/utils/: mod.rs
src/modules/app/commands/radio/: consumer.rs  mod.rs
src/modules/app/commands/voice/: join.rs  leave.rs  mute.rs
src/modules/app/listeners/: mod.rs
src/modules/app/listeners/chat/: love.rs  mod.rs
src/modules/app/listeners/modal/: poll_option.rs
src/modules/app/listeners/voice/: join_channel.rs  mod.rs
src/modules/app/services/integrations/: mod.rs
src/modules/core/: mod.rs
src/modules/core/actions/: voice.rs
src/modules/core/entities/: mod.rs  poll.rs  user.rs
src/modules/core/helpers/components/: button.rs
src/modules/core/lib/: arguments.rs  debug.rs  embeds.rs  mod.rs
