[package]
name = "bostil-bot"
authors = ["Cassiano Rodrigues <kszinhu@modscleo4.dev.br>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json"] }
regex = "*"
serenity = { default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model"], version = "*" }
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
