[package]
name = "bostil-bot"
authors = ["Cassiano Rodrigues <kszinhu@modscleo4.dev.br>"]
repository = "https://github.com/kszinhu/bostil-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["json"] }
regex = "*"
serenity = { default-features = false, features = [
  "cache",
  "client",
  "gateway",
  "voice",
  "rustls_backend",
  "model",
], version = "*" }
songbird = { version = "*" }
tokio = { version = "*", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
once_cell = { version = "1.18.0", features = ["std"] }
rust-i18n = "2.0.0"
colored = "2.0.4"
