[workspace]
resolver = "2"
members = ["app", "core"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
authors = ["Cassiano Rodrigues <kszinhu@modscleo4.dev.br>"]
edition = "2021"

[workspace.dependencies]
# Discord
serenity = { default-features = false, features = [
  "cache",
  "client",
  "http",
  "framework",
  "standard_framework",
  "gateway",
  "voice",
  "rustls_backend",
  "model",
  "collector",
], version = "0.12" }
songbird = { features = ["builtin-queue"], version = "0.4" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-futures = "0.2"

# Other
lazy_static = "*"
once_cell = { version = "*", features = ["std"] }
